modified eventByDate in eventByMonth
